--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p></p>
             </div>
             <div id = "sidebar">
-                <h3>Side-Bar</h3>
+                <!-- <h3>Side-Bar</h3> -->
                 <p></p>
             </div>
           <div id = "bottom"></div>
