--- a/index.html
+++ b/index.html
@@ -9,33 +9,32 @@
 <body>
     <h1>환자 목록</h1>
 
-    <div class="patient-list">
-        <!-- 첫 번째 환자 정보 -->
-        <div class="patient">
-            <h2>환자 1</h2>
-            <p><strong>이름:</strong> 홍길동</p>
-            <p><strong>성별:</strong> 남성</p>
-            <p><strong>생년월일:</strong> 1990-01-15</p>
-            <p><strong>연락처:</strong> 123-456-7890</p>
-        </div>
-
-        <!-- 두 번째 환자 정보 -->
-        <div class="patient">
-            <h2>환자 2</h2>
-            <p><strong>이름:</strong> 이순신</p>
-            <p><strong>성별:</strong> 남성</p>
-            <p><strong>생년월일:</strong> 1985-03-10</p>
-            <p><strong>연락처:</strong> 987-654-3210</p>
-        </div>
-        
-        <!-- 세 번째 환자 정보 -->
-        <div class="patient">
-            <h2>환자 3</h2>
-            <p><strong>이름:</strong> 신사임당</p>
-            <p><strong>성별:</strong> 여성</p>
-            <p><strong>생년월일:</strong> 1975-12-05</p>
-            <p><strong>연락처:</strong> 555-123-4567</p>
-        </div>
-    </div>
+    <table>
+        <tr>
+            <th>환자 이름</th>
+            <th>성별</th>
+            <th>생년월일</th>
+            <th>연락처</th>
+        </tr>
+        <tr class="patient">
+            <td>홍길동</td>
+            <td>남성</td>
+            <td>1990-01-15</td>
+            <td>123-456-7890</td>
+        </tr>
+        <tr class="patient">
+            <td>이순신</td>
+            <td>남성</td>
+            <td>1985-03-10</td>
+            <td>987-654-3210</td>
+        </tr>
+        <tr class="patient">
+            <td>신사임당</td>
+            <td>여성</td>
+            <td>1975-12-05</td>
+            <td>555-123-4567</td>
+        </tr>
+        <!-- 다른 환자 정보도 동일한 형식으로 추가할 수 있습니다 -->
+    </table>
 </body>
 </html>
