--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- head 부분은 위의 예제와 동일하게 작성 -->
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="style_index.css">
+        <title>환자 목록</title>
+    </head>
 <body>
     <h1>환자 목록</h1>
 
@@ -35,6 +38,7 @@
             </td>
         </tr>
         <tr class="patient">
+            <td><a href="view.html?name=정지호">상세 정보 보기</a></td>
             <td>정지호</td>
             <td>남성</td>
             <td>1988-11-30</td>
@@ -45,6 +49,7 @@
             </td>
         </tr>
         <tr class="patient">
+            <td><a href="view.html?name=한예령">상세 정보 보기</a></td>
             <td>한예령</td>
             <td>여성</td>
             <td>1993-05-25</td>
