--- a/view.html
+++ b/view.html
@@ -38,7 +38,8 @@
             alert("환자 " + patientName + " 정보를 수정합니다.");
             // 수정 페이지로 이동할 수 있는 코드를 추가할 수 있습니다.
             // 예를 들어:
-            // location.href = "edit.html?name=" + patientName;
+            location.href = "edit.html?name=" + patientName;
+            
         });
 
         // 삭제 버튼 클릭 시 실행되는 함수
@@ -46,7 +47,7 @@
             // 삭제 버튼을 클릭했을 때 실행할 동작을 정의합니다.
             if (confirm("환자 " + patientName + " 정보를 삭제할까요?")) {
                 alert("환자 " + patientName + " 정보가 삭제되었습니다.");
-                // 삭제할 때 필요한 코드를 추가할 수 있습니다.
+          
             }
         });
     </script>
