--- a/view.html
+++ b/view.html
@@ -36,9 +36,8 @@
         document.getElementById('edit-button').addEventListener('click', function () {
             // 수정 버튼을 클릭했을 때 실행할 동작을 정의합니다.
             alert("환자 " + patientName + " 정보를 수정합니다.");
-            // 수정 페이지로 이동할 수 있는 코드를 추가할 수 있습니다.
-            // 예를 들어:
-            location.href = "edit.html?name=" + patientName;
+            // 수정 페이지로 이동합니다.
+            window.location.href = "edit.html?name=" + patientName;
             
         });
 
