--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style_index.css">
         <link rel="stylesheet" type="text/css" href="my.css">
         <title>환자 목록</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     </head>
 <body>
     <h1>환자 목록</h1>
