--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 
     </table>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <script>
         // 수정 버튼을 눌렀을 때 호출되는 함수
         function editPatient(patientName) {
