--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     </head>
 <body>
-    <h1>환자 목록</h1>
+    <div class="container">
+        <h1 class="mt-5 text-center">환자 목록</h1>
+
 
     <table>
         <tr>
