--- a/add.html
+++ b/add.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style_add.css">
+    <link rel="stylesheet" type="text/css" href="my.css">
     <title>환자 정보 추가</title>
 </head>
 <body>
