--- a/edit.html
+++ b/edit.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style_edit.css">
+    <link rel="stylesheet" type="text/css" href="my.css">
     <title>환자 정보 수정</title>
 </head>
 <body>
