--- a/view.html
+++ b/view.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style_view.css">
+    <link rel="stylesheet" type="text/css" href="my.css">
     <title>레코드 상세 정보</title>
 </head>
 <body>
